improved code readability

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -27,8 +27,16 @@
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
     "       title='The simplest plot in the world')\n",
-    "ax.grid()"
+    "ax.grid('on')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8500e1ae-a335-4d24-96c6-97108950d206",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
